apps/scripts/archinstall/base/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: archinstall-https
spec:
  hostnames:
    - archinstall.nahue.ar
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: nginx-fabric
      sectionName: archinstall-https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: archinstall
          port: 443
          weight: 1
