apps/scripts/archinstall/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archinstall
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /NPastorale/scripts/main/arch-installation/autoinstall.sh
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: "raw.githubusercontent.com"
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - archinstall.nahue.ar
      secretName: archinstall
  rules:
    - host: archinstall.nahue.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archinstall
                port:
                  number: 443
